# dhash

./: .gitignore  README.md  configure.ac  dhash.cpp  dhash.h
nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
src/: Makefile.am  dhash.c  dhash.h
